<resources>
    <string name="app_name">Tajwaycabs</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dialog_message">Welcome to Alert Dialog</string>
    <string name="dialog_title">Javatpoint Alert Dialog</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <string name="Login_signUp">Login / Sign Up</string>
    <string name="Login">Login</string>
    <string name="register">Register</string>
    <string name="Sign_UP">Sign UP</string>
    <string name="Enter_Mobile_No">Enter Mobile No...</string>
    <string name="By_signing_up_you_accept_our">By signing up, you accept our</string>
    <string name="Dont_have_account">Don\'t have an accoun?</string>
    <string name="sign_text">Terms &amp; Conditions </string>
    <string name="NAME">NAME</string>
    <string name="Full_Name">Full Name</string>
    <string name="Company_Name">Company Name</string>
    <string name="MOBILE">MOBILE</string>
    <string name="Ulternate_mobile_Number">Alternative Mobile No.</string>
    <string name="EMAIL">Enter Email Address</string>
    <string name="DATE_OF_BIRTH">DATE OF BIRTH</string>
    <string name="TYPE">TYPE</string>
    <string name="CITY">CITY</string>
    <string name="ADDRESS">ADDRESS</string>
    <string name="SIGN_UP">SIGN UP</string>
    <string name="action_settings">Settings</string>
    <string name="Thank_you_Text">Thanks for sunmiting your\nrequest we will let \n you know</string>
    <string name="accept_term_of_services">Accept term of services</string>
    <string name="already_a_member">Already a menber?</string>
    <string name="WalleteNote">Note :-To create booking you should have minimum ₹ 1000 in your wallet</string>
    <!--Minimum wallet Points should be\n Points 1000 to Accept Booking-->
    <string name="clickToRead">Click to read</string>
    <string name="loading">Loading</string>
    <string name="please_check_network">Please check network.</string>


    <string name="msg_token_fmt">New Notification</string>
    <string name="fcm_token">FCM Token: %s</string>
    <string name="title_activity_driver_accounting">DriverAccounting</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="particular">Particular &amp; Remarks</string>
    <string name="dr">Dr.</string>
    <string name="cr">Cr.</string>
    <string name="remarks">Remarks</string>
    <string name="amount">Amount</string>
    <string name="submit">Submit</string>
    <string name="gps_network_not_enabled">GPS network not enabled</string>
    <string name="open_location_settings">Enable</string>

    <string-array name="cartype_array">
        <item>Sedan</item>
        <item>SUV</item>
        <item>HatchBack</item>

    </string-array>


</resources>