<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.Login_Activity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarprofile"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/white_color">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@drawable/edit_shape"
                android:text="@string/Login"
                android:textColor="@color/black_color"
                android:textSize="18dp" />


            <Button
                android:id="@+id/tv_new_user_login"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_below="@+id/btn_login"
                android:layout_centerHorizontal="true"
                android:layout_gravity="end"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/edit_shape"
                android:text="@string/Sign_UP"
                android:textAllCaps="false"
                android:visibility="gone" />


        </androidx.appcompat.widget.Toolbar>


        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/toolbarprofile">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <!--<TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/abril_fatface"
                    android:textColor="@color/black"
                    android:gravity="center"
                    android:textSize="25dp" />-->

                <androidx.viewpager.widget.ViewPager
                    android:id="@+id/viewPager"
                    android:layout_width="match_parent"
                    android:layout_height="190dp"
                    android:layout_marginBottom="8dp" />

                <LinearLayout
                    android:id="@+id/SliderDots"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/viewPager"
                    android:gravity="center_vertical|center_horizontal"
                    android:orientation="horizontal" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp">

                </LinearLayout>


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/et_phone_nubmer_login"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginLeft="30dp"
                        android:layout_marginRight="30dp"
                        android:background="@drawable/edt_shape"
                        android:hint="@string/Enter_Mobile_No"
                        android:inputType="number"
                        android:maxLength="10"
                        android:paddingLeft="10dp"
                        android:textColor="@color/black_color"
                        android:textColorHint="@color/black_color" />

                    <Button
                        android:id="@+id/tv_done_login"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_below="@+id/et_phone_nubmer_login"
                        android:layout_marginLeft="30dp"
                        android:layout_marginTop="50dp"
                        android:layout_marginRight="30dp"
                        android:backgroundTint="@color/orange_color"
                        android:text="@string/Login_signUp"
                        android:textColor="@color/white_color" />


                </RelativeLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="20dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5sp"
                            android:gravity="center_horizontal"
                            android:text="@string/Dont_have_account"></TextView>

                        <TextView
                            android:id="@+id/registerTab"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5sp"
                            android:gravity="center_horizontal"
                            android:paddingLeft="5dp"
                            android:text="@string/register"
                            android:textColor="@color/orange_dark_color"
                            android:textSize="18sp"
                            android:textStyle="bold"></TextView>


                    </LinearLayout>



                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/checkBox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/By_signing_up_you_accept_our"
                        android:checked="true"/>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="50dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/sign_text"
                        android:textColor="#141414"
                        android:textSize="15dp" />

                    <TextView
                        android:id="@+id/tv_clickToRead"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="5dp"
                        android:text="@string/clickToRead"
                        android:textColor="#4F8CF3"
                        android:textSize="15dp" />

                </LinearLayout>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:text="@string/By_signing_up_you_accept_our"
                    android:textColor="#5C5959"
                    android:textSize="15dp"
                    android:visibility="gone" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/sign_text"
                    android:textColor="#141414"
                    android:textSize="15dp"
                    android:visibility="gone" />


            </LinearLayout>
        </androidx.core.widget.NestedScrollView>




    </LinearLayout>

</LinearLayout>