<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvViewAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:padding="10dp"
            android:text="View All"
            android:textSize="16sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:id="@+id/rlSelectBooking"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvViewAll"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp">

            <Spinner
                android:id="@+id/spinnerBookingId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/spinner_bg"
                android:paddingStart="10dp"
                android:paddingEnd="10dp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="20dp"
                android:padding="10dp"
                android:src="@drawable/ic_down_arrow" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/fillTable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rlSelectBooking"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp">

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/spinner_bg"
                android:padding="10dp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="20dp"
                android:padding="10dp"
                android:src="@drawable/ic_down_arrow" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/fillTable1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/fillTable"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp">

            <Spinner
                android:id="@+id/spinnerCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/spinner_bg"
                android:padding="10dp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="20dp"
                android:padding="10dp"
                android:src="@drawable/ic_down_arrow" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/fillTable2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/fillTable1"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/etAmount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/spinner_bg"
                android:hint="Enter Amount"
                android:inputType="number"
                android:padding="10dp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/fillTable3"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_below="@+id/fillTable2">

            <EditText
                android:id="@+id/etRemarks"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:background="@drawable/spinner_bg"
                android:gravity="top"
                android:hint="Enter Remarks"
                android:inputType="text"
                android:padding="10dp" />

        </RelativeLayout>

        <Button
            android:id="@+id/tvSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/fillTable3"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="20dp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/submit"
            android:textColor="@color/white_color" />

        <LinearLayout
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvSubmit"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/green" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3">

                <LinearLayout
                    android:layout_width="0dp" android:layout_height="match_parent"
                    android:layout_marginStart="2dp"
                    android:layout_weight="1.3"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="2dp">

                    <TextView
                        android:id="@+id/tvParticular"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Particular"
                        android:textSize="12sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".01"
                    android:background="@color/green" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/tvCredit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/cr"
                        android:textSize="12sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".01"
                    android:background="@color/green" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/tvDebit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/dr"
                        android:textSize="12sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".01"
                    android:background="@color/green" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/tvNone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="None"
                        android:textSize="12sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".01"
                    android:background="@color/green" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/tvTotalAmount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="Amount"
                        android:textSize="12sp"
                        android:textStyle="bold" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/green" />

        </LinearLayout>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerviewNavOct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/toolbar"
            android:orientation="vertical"
            android:visibility="visible"
            tools:listitem="@layout/item_driver_accounting" />

        <LinearLayout
            android:id="@+id/llTotal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/recyclerviewNavOct"
            android:orientation="vertical"
            android:weightSum="3">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="2dp"
                    android:layout_weight="2.5"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="2dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Total"
                        android:textSize="12sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/tvFinalAmount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="0"
                        android:textSize="12sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/green" />
        </LinearLayout>

        <EditText
            android:id="@+id/etFinalRemarks"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_below="@+id/llTotal"
            android:layout_margin="10dp"
            android:background="@drawable/spinner_bg"
            android:gravity="top"
            android:hint="Enter Final Remarks"
            android:inputType="text"
            android:padding="10dp" />

        <Button
            android:id="@+id/tvUpload"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etFinalRemarks"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/submit"
            android:textColor="@color/white_color" />
    </RelativeLayout>
</androidx.core.widget.NestedScrollView>